[gd_scene load_steps=2 format=3 uid="uid://cpqrlmncib0i"]

[ext_resource type="Script" path="res://ui/game_win.gd" id="1_sirex"]

[node name="game_win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sirex")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1180.0
offset_bottom = 677.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -164.0
offset_right = 15.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
bbcode_enabled = true
text = "[center][rainbow]
YOU WIN"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -27.0
offset_right = 123.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
